--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div id="alert-box" class="hidden">
         <span class="close-x" onclick="closeAlert()">X</span>
         <h2 id="alert-msg"></h2>
-        <button id="alert-btn" class="hidden" onclick="finishApp()">Oke, nhớ ùii</button>
+        <button id="alert-btn" class="hidden" onclick="sendData()">Oke, nhớ ùii</button>
     </div>
 
     <script>
@@ -214,4 +214,5 @@ function sendData() {
 </body>
 
 </html>
+
 
