--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <h1>Bé hãy điền tên của mình để LeeZyy biết bé là ai nhee</h1>
         <input type="text" id="nameInput" placeholder="Nhập tên bé...">
         <br>
-        <button onclick="showWarning('Khoan! Bé nhớ lên đồ xinh vào nhá', true)">Xong</button>
+        <button onclick="sendData()"('Khoan! Bé nhớ lên đồ xinh vào nhá', true)">Xong</button>
     </div>
 
     <div id="pageEnd" class="container hidden">
@@ -214,5 +214,6 @@ function sendData() {
 </body>
 
 </html>
+
 
 
