--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             const finalTime = customTime ? `${timeChoice} | Tự nhập: ${customTime}` : timeChoice;
 
             // Gửi lên SheetDB
-            fetch('https://sheetdb.io/api/v1/cio7sm3m13j13', {
+            fetch('https://sheetdb.io/api/v1/tfar3qhf7apaj', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
@@ -212,6 +212,7 @@
     </script>
 </body>
 </html>
+
 
 
 
