--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div id="pageEnd" class="container hidden">
         <h1>Cảm ơn bé đã giành thời gian trả lời với tớ nha 
-            <span class="secret-heart" onclick="window.open('https://docs.google.com/spreadsheets/d/1gthaeHLvZzGmad6CrUCM3PM0y5sjwOwQzk5_y6ZHfEw/edit?gid=2100332703#gid=2100332703')">💖</span>
+            <span class="secret-heart" onclick="window.open('https://docs.google.com/spreadsheets/d/1teZYenpy9OZLlgGW1HLJFqMovIRy2KFqLf8pqDcV05E/edit?gid=0#gid=0')">💖</span>
         </h1>
     </div>
 
@@ -223,6 +223,7 @@
     </script>
 </body>
 </html>
+
 
 
 
