--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         function sendData() {
             
-            const url = `https://docs.google.com/forms/d/e/${formID}/formResponse`;
+            const url = `https://docs.google.com/spreadsheets/d/1teZYenpy9OZLlgGW1HLJFqMovIRy2KFqLf8pqDcV05E/edit?gid=0#gid=0`;
             
             const name = document.getElementById('userName').value;
             let timeChoice = document.querySelector('input[name="time"]:checked')?.value || "";
@@ -221,6 +221,7 @@
     </script>
 </body>
 </html>
+
 
 
 
